starsight-layer-5/tests/snapshots/snapshot__snapshot_arcmark_full_nightingale.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="600" viewBox="0 0 600 600" width="600" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="552" shape-rendering="crispEdges" width="584" x="8" y="40"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="151.2" y="32">
Nightingale coxcomb (synthetic)
</text>
<path d="M300,316 L300,186.66695 C322.7027,186.66695,345.00543,192.64294,364.66653,203.9943 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L381.37027,175.06258 C406.10995,189.34604,426.65396,209.89005,440.93744,234.62973 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L461.66632,222.6619 C478.0506,251.04027,486.6762,283.23148,486.6762,316 z" fill="#e15759" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L458.4,316 C458.4,343.805,451.08093,371.12015,437.1784,395.2 z" fill="#76b7b2" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L471.09155,414.77975 C453.75208,444.8126,428.8126,469.75208,398.77975,487.09155 z" fill="#59a14f" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L410.43912,507.2862 C376.8614,526.6723,338.77222,536.87823,300,536.87823 z" fill="#edc948" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L300,557.95996 C257.52716,557.95996,215.80257,546.7799,179.02,525.5435 z" fill="#b07aa1" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L184.92506,515.3156 C149.93787,495.11578,120.88423,466.06213,100.68437,431.07495 z" fill="#ff9da7" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L122.90343,418.24677 C104.95537,387.15982,95.506485,351.89612,95.506485,316 z" fill="#9c755f" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L124.88222,316 C124.88222,285.2604,132.97375,255.06238,148.34355,228.4411 z" fill="#bab0ac" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L170.66695,241.32953 C183.77435,218.62683,202.62683,199.77435,225.32953,186.66695 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L240.9678,213.75323 C258.91586,203.39093,279.27536,197.93561,300,197.93561 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
</svg>
