starsight-layer-5/tests/snapshots/snapshot__snapshot_arcmark_nested_sunburst.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="600" viewBox="0 0 600 600" width="600" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="552" shape-rendering="crispEdges" width="584" x="8" y="40"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="199.2" y="32">
Sunburst — 3 levels
</text>
<path d="M300,316 L300,236.8 C343.74097,236.8,379.2,272.25903,379.2,316 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L379.2,316 C379.2,359.74097,343.74097,395.2,300,395.2 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L300,395.2 C256.25903,395.2,220.8,359.74097,220.8,316 z" fill="#e15759" stroke="#000000" stroke-width="0"/>
<path d="M300,316 L220.8,316 C220.8,272.25903,256.25903,236.8,300,236.8 z" fill="#76b7b2" stroke="#000000" stroke-width="0"/>
<path d="M300,157.6 C342.01028,157.6,382.29996,174.28853,412.0057,203.9943 L356.00287,259.99713 C341.14996,245.14426,321.00516,236.8,300,236.8 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M412.0057,203.9943 C441.7115,233.70004,458.4,273.98972,458.4,316 L379.2,316 C379.2,294.99484,370.85574,274.85004,356.00287,259.99713 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
<path d="M458.4,316 C458.4,358.01028,441.7115,398.29996,412.0057,428.0057 L356.00287,372.00287 C370.85574,357.14996,379.2,337.00516,379.2,316 z" fill="#e15759" stroke="#000000" stroke-width="0"/>
<path d="M412.0057,428.0057 C382.29996,457.7115,342.01028,474.4,300,474.4 L300,395.2 C321.00516,395.2,341.14996,386.85574,356.00287,372.00287 z" fill="#76b7b2" stroke="#000000" stroke-width="0"/>
<path d="M300,474.4 C257.98972,474.4,217.70004,457.7115,187.9943,428.0057 L243.99715,372.00287 C258.85004,386.85574,278.99484,395.2,300,395.2 z" fill="#59a14f" stroke="#000000" stroke-width="0"/>
<path d="M187.9943,428.0057 C158.28853,398.29996,141.6,358.01028,141.6,316 L220.8,316 C220.8,337.00516,229.14426,357.14996,243.99715,372.00287 z" fill="#edc948" stroke="#000000" stroke-width="0"/>
<path d="M141.6,316 C141.6,273.98972,158.28853,233.70004,187.9943,203.9943 L243.99715,259.99713 C229.14426,274.85004,220.8,294.99484,220.8,316 z" fill="#b07aa1" stroke="#000000" stroke-width="0"/>
<path d="M187.9943,203.9943 C217.70004,174.28853,257.98972,157.6,300,157.6 L300,236.8 C278.99484,236.8,258.85004,245.14426,243.99715,259.99713 z" fill="#ff9da7" stroke="#000000" stroke-width="0"/>
<path d="M300,52 C334.66898,52,368.99847,58.828552,401.02844,72.09581 L360.61707,169.65749 C341.39908,161.69714,320.8014,157.6,300,157.6 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M401.02844,72.09581 C433.05838,85.36305,462.16153,104.80914,486.6762,129.3238 L412.0057,203.9943 C397.2969,189.28549,379.83502,177.61784,360.61707,169.65749 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
<path d="M486.6762,129.3238 C511.19086,153.83847,530.63696,182.94162,543.9042,214.97157 L446.34253,255.38295 C438.38214,236.16498,426.7145,218.7031,412.0057,203.9943 z" fill="#e15759" stroke="#000000" stroke-width="0"/>
<path d="M543.9042,214.97157 C557.17145,247.00153,564,281.33102,564,316 L458.4,316 C458.4,295.1986,454.30286,274.60092,446.34253,255.38295 z" fill="#76b7b2" stroke="#000000" stroke-width="0"/>
<path d="M564,316 C564,350.66898,557.17145,384.99847,543.9042,417.02844 L446.34253,376.61707 C454.30286,357.39908,458.4,336.8014,458.4,316 z" fill="#59a14f" stroke="#000000" stroke-width="0"/>
<path d="M543.9042,417.02844 C530.63696,449.05838,511.19086,478.16153,486.6762,502.6762 L412.0057,428.0057 C426.7145,413.2969,438.38214,395.83502,446.34253,376.61707 z" fill="#edc948" stroke="#000000" stroke-width="0"/>
<path d="M486.6762,502.6762 C462.16153,527.19086,433.05838,546.63696,401.02844,559.9042 L360.61707,462.34253 C379.83502,454.38214,397.2969,442.7145,412.0057,428.0057 z" fill="#b07aa1" stroke="#000000" stroke-width="0"/>
<path d="M401.02844,559.9042 C368.99847,573.17145,334.66898,580,300,580 L300,474.4 C320.8014,474.4,341.39908,470.30286,360.61707,462.34253 z" fill="#ff9da7" stroke="#000000" stroke-width="0"/>
<path d="M300,580 C265.33102,580,231.00153,573.17145,198.97157,559.9042 L239.38295,462.34253 C258.60092,470.30286,279.1986,474.4,300,474.4 z" fill="#9c755f" stroke="#000000" stroke-width="0"/>
<path d="M198.97157,559.9042 C166.94162,546.63696,137.83847,527.19086,113.32381,502.6762 L187.9943,428.0057 C202.7031,442.7145,220.16498,454.38214,239.38295,462.34253 z" fill="#bab0ac" stroke="#000000" stroke-width="0"/>
<path d="M113.32381,502.6762 C88.80914,478.16153,69.36305,449.05838,56.09581,417.02844 L153.65749,376.61707 C161.61784,395.83502,173.28549,413.2969,187.9943,428.0057 z" fill="#4e79a7" stroke="#000000" stroke-width="0"/>
<path d="M56.09581,417.02844 C42.828552,384.99847,36,350.66898,36,316 L141.6,316 C141.6,336.8014,145.69714,357.39908,153.65749,376.61707 z" fill="#f28e2b" stroke="#000000" stroke-width="0"/>
<path d="M36,316 C36,281.33102,42.828552,247.00153,56.09581,214.97157 L153.65749,255.38295 C145.69714,274.60092,141.6,295.1986,141.6,316 z" fill="#e15759" stroke="#000000" stroke-width="0"/>
<path d="M56.09581,214.97157 C69.36305,182.94162,88.80914,153.83847,113.32381,129.3238 L187.9943,203.9943 C173.28549,218.7031,161.61784,236.16498,153.65749,255.38295 z" fill="#76b7b2" stroke="#000000" stroke-width="0"/>
<path d="M113.32381,129.3238 C137.83847,104.80914,166.94162,85.36305,198.97157,72.09581 L239.38295,169.65749 C220.16498,177.61784,202.7031,189.28549,187.9943,203.9943 z" fill="#59a14f" stroke="#000000" stroke-width="0"/>
<path d="M198.97157,72.09581 C231.00153,58.828552,265.33102,52,300,52 L300,157.6 C279.1986,157.6,258.60092,161.69714,239.38295,169.65749 z" fill="#edc948" stroke="#000000" stroke-width="0"/>
</svg>
