starsight-layer-5/tests/snapshots/snapshot__snapshot_arcmark_partial_gauge.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="400" viewBox="0 0 600 400" width="600" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="352" shape-rendering="crispEdges" width="584" x="8" y="40"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="213.6" y="32">
Gauge — 65 / 100
</text>
<path d="M181.71518,334.28482 C116.388275,268.95792,116.388275,163.04208,181.71518,97.71518 C247.04208,32.388275,352.95792,32.388275,418.28482,97.71518 C483.61172,163.04208,483.61172,268.95792,418.28482,334.28482 L414.80585,330.80585 C478.21136,267.40033,478.21136,164.59967,414.80585,101.194145 C351.40033,37.78862,248.59967,37.78862,185.19415,101.194145 C121.78862,164.59967,121.78862,267.40033,185.19415,330.80585 z" fill="#8b8b8b" stroke="#000000" stroke-width="0"/>
<path d="M185.19415,330.80585 C121.78862,267.40033,121.78862,164.59967,185.19415,101.194145 C248.59967,37.78862,351.40033,37.78862,414.80585,101.194145 C478.21136,164.59967,478.21136,267.40033,414.80585,330.80585 L378.85654,294.85654 C422.4078,251.30528,422.4078,180.69472,378.85654,137.14346 C335.30527,93.592186,264.69473,93.592186,221.14346,137.14346 C177.5922,180.69472,177.5922,251.30528,221.14346,294.85654 z" fill="#c8c8c8" stroke="#000000" stroke-width="0"/>
<path d="M185.19415,330.80585 C121.78862,267.40033,121.78862,164.59967,185.19415,101.194145 C248.59967,37.78862,351.40033,37.78862,414.80585,101.194145 C478.21136,164.59967,478.21136,267.40033,414.80585,330.80585 L378.85654,294.85654 C422.4078,251.30528,422.4078,180.69472,378.85654,137.14346 C335.30527,93.592186,264.69473,93.592186,221.14346,137.14346 C177.5922,180.69472,177.5922,251.30528,221.14346,294.85654 z" fill="none" stroke="#ffffff" stroke-width="0.5"/>
<path d="M185.19415,330.80585 C123.542175,269.1539,121.59143,169.81477,180.77539,105.78991 C239.95938,41.765045,339.14532,35.91574,405.4444,92.54049 L372.42645,131.19952 C326.8877,92.30577,258.75998,96.32347,218.10837,140.30014 C177.45674,184.27682,178.79666,252.50975,221.14346,294.85654 z" fill="#4caf50" stroke="#000000" stroke-width="0"/>
<path d="M185.19415,330.80585 C123.542175,269.1539,121.59143,169.81477,180.77539,105.78991 C239.95938,41.765045,339.14532,35.91574,405.4444,92.54049 L372.42645,131.19952 C326.8877,92.30577,258.75998,96.32347,218.10837,140.30014 C177.45674,184.27682,178.79666,252.50975,221.14346,294.85654 z" fill="none" stroke="#ffffff" stroke-width="1"/>
</svg>
