starsight-layer-5/tests/snapshots/snapshot__snapshot_area_basic.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="800" viewBox="0 0 1200 800" width="1200" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="707" shape-rendering="crispEdges" width="1131.7999" x="47.4" y="48"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="450.09998" y="32">
Daily Temperature Profile (Annual)
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" x="573.7" y="790">
Day of Year
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" transform="rotate(-90 22, 462.7)" x="22" y="462.7">
Temperature (°C)
</text>
<path d="M98.84545,755 L98.84545,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M356.07272,755 L356.07272,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M613.3,755 L613.3,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M870.5272,755 L870.5272,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M1127.7545,755 L1127.7545,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M47.4,722.86365 L1179.2,722.86365" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M47.4,508.62122 L1179.2,508.62122" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M47.4,294.37878 L1179.2,294.37878" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M47.4,80.13636 L1179.2,80.13636" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M98.84545,401.5 L101.417725,393.39005 L103.99,385.30215 L106.56227,377.25824 L109.134544,369.28012 L111.70682,361.3892 L114.27909,353.6065 L116.851364,345.9527 L119.42363,338.44772 L121.9959,331.1109 L124.56818,323.9608 L127.14045,317.0151 L129.71272,310.29065 L132.285,303.80325 L134.85727,297.56763 L137.42953,291.59738 L140.00182,285.90494 L142.57408,280.5015 L145.14636,275.39688 L147.71863,270.59967 L150.29091,266.11703 L152.86317,261.95474 L155.43546,258.11716 L158.00772,254.60716 L160.57999,251.42625 L163.15227,248.57443 L165.72453,246.05025 L168.29681,243.85085 L170.86908,241.97195 L173.44136,240.40785 L176.01363,239.15155 L178.5859,238.19464 L181.15817,237.52751 L183.73045,237.13927 L186.30272,237.01787 L188.875,237.15016 L191.44727,237.52193 L194.01953,238.11798 L196.59181,238.92226 L199.16408,239.91785 L201.73636,241.08713 L204.30862,242.41179 L206.8809,243.873 L209.45317,245.45148 L212.02545,247.12752 L214.59772,248.8812 L217.16998,250.69238 L219.74226,252.54088 L222.31453,254.40652 L224.88681,256.26926 L227.45908,258.10925 L230.03136,259.90704 L232.60362,261.64346 L235.1759,263.29996 L237.74817,264.85855 L240.32045,266.3019 L242.89272,267.61356 L245.465,268.77777 L248.03726,269.77982 L250.60953,270.60596 L253.18181,271.24353 L255.75407,271.681 L258.32635,271.908 L260.89862,271.9154 L263.4709,271.69543 L266.04318,271.24158 L268.61545,270.54874 L271.1877,269.61313 L273.75998,268.43243 L276.33224,267.00574 L278.90454,265.33356 L281.4768,263.4178 L284.04907,261.26178 L286.62134,258.87033 L289.19363,256.24957 L291.7659,253.40695 L294.33817,250.35132 L296.91043,247.09276 L299.48273,243.6426 L302.055,240.01334 L304.62726,236.21861 L307.19952,232.27313 L309.7718,228.19257 L312.3441,223.99352 L314.91635,219.69344 L317.48862,215.31052 L320.06088,210.86363 L322.63318,206.37224 L325.20544,201.85628 L327.7777,197.3361 L330.34998,192.83237 L332.92224,188.3659 L335.49454,183.95769 L338.0668,179.62868 L340.63907,175.39975 L343.21133,171.29155 L345.78363,167.32451 L348.3559,163.51859 L350.92816,159.89333 L353.50043,156.46765 L356.07272,153.25984 L358.645,150.28743 L361.21725,147.56711 L363.78952,145.11461 L366.3618,142.94475 L368.93408,141.07121 L371.50635,139.5066 L374.0786,138.2623 L376.65088,137.34846 L379.22318,136.77396 L381.79544,136.54628 L384.3677,136.67159 L386.93997,137.1546 L389.51224,137.99866 L392.08453,139.20558 L394.6568,140.7758 L397.22906,142.70825 L399.80133,145.00041 L402.37363,147.64835 L404.9459,150.64662 L407.51816,153.98845 L410.09042,157.66566 L412.66272,161.66872 L415.235,165.98682 L417.80725,170.60788 L420.37952,175.51865 L422.95178,180.70471 L425.52408,186.1506 L428.09634,191.83987 L430.6686,197.75511 L433.24088,203.8781 L435.81317,210.18985 L438.38544,216.67067 L440.9577,223.30034 L443.52997,230.05809 L446.10223,236.92282 L448.67453,243.8731 L451.2468,250.88725 L453.81906,257.9436 L456.39133,265.02036 L458.96362,272.09595 L461.5359,279.1489 L464.10815,286.15808 L466.68042,293.10275 L469.25272,299.96265 L471.82498,306.71808 L474.39725,313.35004 L476.9695,319.84024 L479.54178,326.17133 L482.11407,332.32672 L484.68634,338.29095 L487.2586,344.0496 L489.83087,349.58923 L492.40317,354.8978 L494.97543,359.96432 L497.5477,364.77924 L500.11996,369.3342 L502.69223,373.62225 L505.26453,377.6379 L507.8368,381.37698 L510.40906,384.8368 L512.9813,388.016 L515.5536,390.91483 L518.12585,393.53482 L520.6982,395.879 L523.27045,397.95178 L525.8427,399.75894 L528.415,401.30762 L530.98724,402.6062 L533.5595,403.66443 L536.1318,404.49313 L538.70404,405.10443 L541.2763,405.51144 L543.84863,405.7283 L546.4209,405.77014 L548.99316,405.65298 L551.5654,405.3936 L554.1377,405.00943 L556.70996,404.51865 L559.2822,403.9399 L561.8545,403.2923 L564.42676,402.5952 L566.9991,401.86838 L569.57135,401.13162 L572.1436,400.4048 L574.7159,399.7077 L577.28815,399.0601 L579.8604,398.48135 L582.4327,397.99057 L585.00494,397.6064 L587.5772,397.34702 L590.14954,397.22986 L592.7218,397.2717 L595.29407,397.48856 L597.86633,397.89557 L600.4386,398.50687 L603.01086,399.33557 L605.5831,400.3938 L608.1554,401.69238 L610.7277,403.24106 L613.3,405.04822 L615.87225,407.121 L618.4445,409.46518 L621.0168,412.08517 L623.58905,414.984 L626.1613,418.1632 L628.7336,421.62302 L631.30585,425.3621 L633.8782,429.37775 L636.45044,433.6658 L639.0227,438.22076 L641.595,443.03568 L644.16724,448.1022 L646.7395,453.41077 L649.31177,458.9504 L651.88403,464.70905 L654.4563,470.67328 L657.0286,476.82867 L659.6009,483.15976 L662.17316,489.64996 L664.7454,496.28192 L667.3177,503.03735 L669.88995,509.89725 L672.4622,516.8419 L675.0345,523.8511 L677.60675,530.90405 L680.1791,537.9796 L682.75134,545.0564 L685.3236,552.11273 L687.8959,559.1269 L690.46814,566.07715 L693.0404,572.9419 L695.6127,579.69965 L698.18494,586.32935 L700.7572,592.8102 L703.3295,599.1219 L705.9018,605.2449 L708.47406,611.16016 L711.0463,616.84937 L713.6186,622.2953 L716.19086,627.4814 L718.7631,632.3921 L721.3354,637.0132 L723.9077,641.3313 L726.48,645.33435 L729.05225,649.01154 L731.6245,652.3534 L734.1968,655.3517 L736.76904,657.9996 L739.3413,660.29175 L741.9136,662.2242 L744.48584,663.79443 L747.05817,665.00134 L749.63043,665.8454 L752.2027,666.3284 L754.77496,666.45374 L757.3472,666.226 L759.9195,665.65155 L762.49176,664.7377 L765.064,663.4934 L767.6363,661.9288 L770.2086,660.05524 L772.7809,657.8854 L775.35315,655.4329 L777.9254,652.7126 L780.4977,649.7402 L783.06995,646.53235 L785.6422,643.1067 L788.2145,639.4814 L790.78674,635.6755 L793.3591,631.70844 L795.93134,627.6003 L798.5036,623.37134 L801.07587,619.0423 L803.64813,614.6341 L806.2204,610.16766 L808.79266,605.6639 L811.3649,601.14374 L813.9372,596.62775 L816.5095,592.13635 L819.0818,587.6895 L821.65405,583.3066 L824.2263,579.0065 L826.7986,574.80743 L829.37085,570.72687 L831.9431,566.7814 L834.5154,562.9867 L837.0877,559.3574 L839.66,555.9072 L842.23224,552.6487 L844.8045,549.593 L847.3768,546.7504 L849.94904,544.12964 L852.5213,541.7382 L855.09357,539.5822 L857.66583,537.66644 L860.23816,535.99426 L862.8104,534.56757 L865.3827,533.38684 L867.95496,532.45123 L870.5272,531.7584 L873.0995,531.30457 L875.67175,531.0846 L878.244,531.09204 L880.8163,531.31903 L883.3886,531.7565 L885.9609,532.39404 L888.53314,533.22015 L891.1054,534.2222 L893.6777,535.3864 L896.24994,536.69806 L898.8222,538.1415 L901.3945,539.7 L903.96674,541.35657 L906.53906,543.09296 L909.1113,544.89075 L911.6836,546.7307 L914.25586,548.59344 L916.8281,550.4591 L919.4004,552.3076 L921.97266,554.1188 L924.5449,555.8725 L927.1172,557.5485 L929.6895,559.127 L932.2618,560.5882 L934.83405,561.9129 L937.4063,563.08215 L939.9786,564.07776 L942.55084,564.882 L945.1231,565.4781 L947.6954,565.84985 L950.2677,565.9821 L952.83997,565.8607 L955.41223,565.4725 L957.9845,564.80536 L960.55676,563.84845 L963.129,562.59216 L965.7013,561.0281 L968.27356,559.1492 L970.8458,556.94977 L973.41815,554.4256 L975.9904,551.5737 L978.5627,548.3928 L981.13495,544.8829 L983.7072,541.0452 L986.2795,536.883 L988.85175,532.4003 L991.424,527.60315 L993.9963,522.49854 L996.5686,517.09503 L999.14087,511.40262 L1001.71313,505.43237 L1004.2854,499.19675 L1006.85767,492.70935 L1009.42993,485.9849 L1012.0022,479.0392 L1014.57446,471.8891 L1017.1467,464.55228 L1019.71906,457.0473 L1022.2913,449.3935 L1024.8635,441.6108 L1027.4358,433.71988 L1030.0082,425.74176 L1032.5804,417.69785 L1035.1527,409.60995 L1035.1527,722.86365 L98.84545,722.86365 z" fill="#ff0000" fill-opacity="0.6" stroke="#000000" stroke-opacity="0.6" stroke-width="1"/>
<path d="M98.84545,755 L98.84545,760" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="95.24545" y="772">
0
</text>
<path d="M356.07272,755 L356.07272,760" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="345.27274" y="772">
100
</text>
<path d="M613.3,755 L613.3,760" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="602.5" y="772">
200
</text>
<path d="M870.5272,755 L870.5272,760" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="859.72723" y="772">
300
</text>
<path d="M1127.7545,755 L1127.7545,760" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="1116.9545" y="772">
400
</text>
<path d="M47.4,722.86365 L42.4,722.86365" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="30" y="727.66364">
0
</text>
<path d="M47.4,508.62122 L42.4,508.62122" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="23" y="513.4212">
10
</text>
<path d="M47.4,294.37878 L42.4,294.37878" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="23" y="299.17877">
20
</text>
<path d="M47.4,80.13636 L42.4,80.13636" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="23" y="84.93636">
30
</text>
<path d="M47.4,755 L1179.2,755" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
<path d="M47.4,48 L47.4,755" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
</svg>
