starsight-layer-5/tests/snapshots/snapshot__snapshot_bar_grouped.snap
---
source: starsight-layer-5/tests/snapshot.rs
expression: svg
---
<svg height="800" viewBox="0 0 1200 800" width="1200" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="707" shape-rendering="crispEdges" width="1128.2001" x="54.6" y="48"/>
<text fill="#111111" font-family="sans-serif" font-size="16" x="489.1" y="32">
Quarterly Revenue by Region
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" x="593.5" y="790">
Quarter
</text>
<text fill="#333333" font-family="sans-serif" font-size="12" transform="rotate(-90 21.999998, 466.3)" x="21.999998" y="466.3">
Revenue (millions)
</text>
<path d="M54.6,755 L54.6,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M336.65002,755 L336.65002,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M618.7,755 L618.7,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M900.75006,755 L900.75006,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M1182.8,755 L1182.8,48" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,722.86365 L1182.8,722.86365" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,631.0455 L1182.8,631.0455" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,539.2273 L1182.8,539.2273" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,447.4091 L1182.8,447.4091" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,355.5909 L1182.8,355.5909" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,263.77274 L1182.8,263.77274" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,171.95454 L1182.8,171.95454" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<path d="M54.6,80.13636 L1182.8,80.13636" fill="none" shape-rendering="crispEdges" stroke="#dddddd" stroke-width="1"/>
<rect fill="#0000ff" height="385.63635" shape-rendering="crispEdges" width="63.931343" x="83.745155" y="337.2273"/>
<rect fill="#0000ff" height="532.5455" shape-rendering="crispEdges" width="63.931335" x="365.79517" y="190.31818"/>
<rect fill="#0000ff" height="468.27274" shape-rendering="crispEdges" width="63.931396" x="647.84515" y="254.59091"/>
<rect fill="#0000ff" height="624.36365" shape-rendering="crispEdges" width="63.931396" x="929.89514" y="98.5"/>
<rect fill="#ff0000" height="257.0909" shape-rendering="crispEdges" width="63.931335" x="163.65933" y="465.77274"/>
<rect fill="#ff0000" height="312.18182" shape-rendering="crispEdges" width="63.931335" x="445.70935" y="410.68182"/>
<rect fill="#ff0000" height="358.09094" shape-rendering="crispEdges" width="63.931396" x="727.75934" y="364.7727"/>
<rect fill="#ff0000" height="385.63635" shape-rendering="crispEdges" width="63.931396" x="1009.8093" y="337.2273"/>
<rect fill="#00ff00" height="165.27277" shape-rendering="crispEdges" width="63.931335" x="243.57352" y="557.5909"/>
<rect fill="#00ff00" height="202" shape-rendering="crispEdges" width="63.931396" x="525.6235" y="520.86365"/>
<rect fill="#00ff00" height="229.54547" shape-rendering="crispEdges" width="63.931396" x="807.6735" y="493.31818"/>
<rect fill="#00ff00" height="284.63638" shape-rendering="crispEdges" width="63.931396" x="1089.7235" y="438.22726"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="188.425" y="772">
Q1
</text>
<text fill="#444444" font-family="sans-serif" font-size="12" x="470.475" y="772">
Q2
</text>
<text fill="#444444" font-family="sans-serif" font-size="12" x="752.525" y="772">
Q3
</text>
<text fill="#444444" font-family="sans-serif" font-size="12" x="1034.5751" y="772">
Q4
</text>
<path d="M54.6,722.86365 L59.6,722.86365" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="38" y="727.66364">
0
</text>
<path d="M54.6,631.0455 L59.6,631.0455" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="635.84546">
100
</text>
<path d="M54.6,539.2273 L59.6,539.2273" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="544.0273">
200
</text>
<path d="M54.6,447.4091 L59.6,447.4091" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="452.20908">
300
</text>
<path d="M54.6,355.5909 L59.6,355.5909" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="360.3909">
400
</text>
<path d="M54.6,263.77274 L59.6,263.77274" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="268.57272">
500
</text>
<path d="M54.6,171.95454 L59.6,171.95454" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="176.75455">
600
</text>
<path d="M54.6,80.13636 L59.6,80.13636" fill="none" shape-rendering="crispEdges" stroke="#444444" stroke-width="1"/>
<text fill="#444444" font-family="sans-serif" font-size="12" x="24" y="84.93636">
700
</text>
<path d="M54.6,755 L1182.8,755" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
<path d="M54.6,48 L54.6,755" fill="none" shape-rendering="crispEdges" stroke="#000000" stroke-width="1"/>
</svg>
